2010-09-18 Braden McDaniel  <braden@endoframe.com>

	* src/Makefile.am (EXTRA_DIST): Fixed directory for openvrml-gl.rc
	and openvrml-gl.vcxproj.

2010-09-18 Braden McDaniel  <braden@endoframe.com>

	SpiderMonkey included in the forthcoming XULRunner 1.9.3 includes
	changes to the JSPropertyOp function signature: a parameter that
	was a jsval in previous versions is now a jsid.  Test for this and
	adjust our usage accordingly.

	* configure.ac
	* src/script/javascript.cpp

2010-09-15 Braden McDaniel  <braden@endoframe.com>

	* src/script/javascript.cpp: JS_NewDouble is deprecated; use
	JS_NewNumberValue instead.

2010-09-15 Braden McDaniel  <braden@endoframe.com>

	* src/script/javascript.cpp: JS_NewDoubleValue is deprecated; use
	JS_NewNumberValue instead.

2010-09-14 Braden McDaniel  <braden@endoframe.com>

	* data/component/shape.xml: Added missing descriptions of
	LineProperties and FillProperties.

2010-09-13 Braden McDaniel  <braden@endoframe.com>

	Add (partially) parsed nodes to the scene in the event of an
	exception during parsing; ensure that the browser::initialized
	event gets send and scene::scene_loaded gets called in the event
	of an exception during parsing.

	* src/libopenvrml/openvrml/local/parse_vrml.h
	(openvrml::local::vrml97_parse_actions::~vrml97_parse_actions()):
	Add (partially) parsed nodes to the scene if the parse_scope stack
	is not empty (that is, parsing was terminated prior to the end of
	correctly formed input).
	* src/libopenvrml/openvrml/scene.cpp
	(openvrml::scene::load(resource_istream &)): Ensure that
	scene_loaded gets called in the event of an exception during
	parsing.
	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::set_world(resource_istream &)): Ensure that
	the browser::initialized event gets sent in the event of an
	exception during parsing.

2010-08-20 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/event.h
	(openvrml::event_emitter::listeners<FieldValue>() const): Must use